syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service.Messages";
import public "Pattern.proto";

message GetPatternsInfo {
	string ownerId = 1;
}

