syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service.Messages";

message PatternOwner {
    string request_id = 1;
    string owner_id = 2;
}
